--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
-<div class="app">
-    <div class="header">
-      <h1>Infinite Dog App</h1>
-      <div id="breed"></div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="app">
+      <div class="header">
+        <h1>Infinite Dog App</h1>
+        <div id="breed"></div>
+      </div>
+      <div class="slideshow" id="slideshow">
+    
+      </div>
     </div>
-    <div class="slideshow" id="slideshow">
-  
-    </div>
-  </div>
+    <script src="main.js"></script>
+  </body>
+</html>
